--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,23 +1,35 @@
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
-<p>login works!</p>
+<div fxFill fxLayout="row" fxLayoutAlign="center center">
+  <mat-card fxFlex="25" fxLayout="column">
+    <mat-card-header>
+      <mat-card-title>Login</mat-card-title>
+      <mat-card-subtitle>Using your username and password</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <form fxLayout="column" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <mat-form-field fxFlex="40">
+          <input matInput placeholder="Username" formControlName="username" />
+        </mat-form-field>
+        <mat-form-field>
+          <input
+            matInput
+            placeholder="Password"
+            type="password"
+            formControlName="password"
+          />
+        </mat-form-field>
+        <button type="submit" hidden #submit></button>
+      </form>
+    </mat-card-content>
+
+    <mat-card-actions fxFlexAlign="center">
+      <button
+        (click)="submit.click()"
+        mat-raised-button
+        color="accent"
+        [disabled]="!loginForm.valid"
+      >
+        Login
+      </button>
+    </mat-card-actions>
+  </mat-card>
+</div>
