Implement create article floating button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<router-outlet> </router-outlet>
+<button mat-fab *ngIf="!isOnArticlePost" class="floating-btn">
+  <mat-icon>add</mat-icon>
+</button>
