Implement file uploader component and fix tagslist

--- a/src/app/article/create-article/create-article.component.html
+++ b/src/app/article/create-article/create-article.component.html
@@ -1,4 +1,3 @@
-<p>create-article works!</p>
 <form (ngSubmit)="onSubmit()" [formGroup]="form">
   <button type="submit" hidden #submit></button>
   <div fxLayout="column">
@@ -12,14 +11,6 @@
         [formControl]="form.controls.description"
       />
     </mat-form-field>
-    <!-- <mat-form-field>
-      <mat-label>Select Tags</mat-label>
-      <mat-select [formControl]="form.controls.tagList" multiple>
-        <mat-option *ngFor="let tag of tags" [value]="tag.title">{{
-          tag.title
-        }}</mat-option>
-      </mat-select>
-    </mat-form-field> -->
     <mat-form-field>
       <mat-chip-list #tagList>
         <mat-chip
@@ -27,12 +18,13 @@
           [selectable]="true"
           [removable]="true"
           (removed)="removeTag(tag)"
-          >{{ tag.title }}
+          >{{ tag }}
           <mat-icon matChipRemove>cancel</mat-icon>
         </mat-chip>
-        <input #tagsInput
+        <input
+          #tagsInput
           placeholder="Tags"
-          [formControl]="tagsCtrl"
+          [formControl]="form.controls.tagList"
           [matChipInputFor]="tagList"
           [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
           (matChipInputTokenEnd)="addTag($event)"
@@ -43,11 +35,9 @@
         (optionSelected)="addSelected($event)"
         #auto="matAutocomplete"
       >
-        <mat-option
-          *ngFor="let tag of filteredTags | async"
-          [value]="tag"
-          >{{ tag.title }}</mat-option
-        >
+        <mat-option *ngFor="let tag of filteredTags | async" [value]="tag">{{
+          tag.title
+        }}</mat-option>
       </mat-autocomplete>
     </mat-form-field>
   </div>
@@ -59,5 +49,7 @@
   (change)="onBodyChange($event)"
 ></ckeditor>
 <button mat-button [disabled]="!form.valid" (click)="submit.click()">
-  Submit {{ form.valid }}
+  Submit {{ form.value | json }}
 </button>
+<app-file-uploader (droppedFile)="droppedImage($event)"></app-file-uploader>
+<img [src]="droppedArticleImage" alt="" />
