--- a/src/app/article/update-article/update-article.component.html
+++ b/src/app/article/update-article/update-article.component.html
@@ -1,1 +1,60 @@
-<p>update-article works!</p>
+<div fxLayout="column">
+  <h1 mat-dialog-title fxFlexAlign="center">Create Article</h1>
+  <form mat-dialog-content (ngSubmit)="onSubmit()" [formGroup]="form">
+    <button type="submit" hidden #submit></button>
+    <div fxLayout="column">
+      <mat-form-field>
+        <input matInput placeholder="title" [formControl]="form.controls.title" />
+        <mat-error *ngIf="form.controls.title.getError('required')"> Title is <strong>required</strong> </mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="description" [formControl]="form.controls.description" />
+      </mat-form-field>
+    </div>
+    <div fxLayout="row" fxLayoutAlign="center">
+      <ckeditor [editor]="editor" [formControl]="form.controls.body"></ckeditor>
+    </div>
+  </form>
+  <div mat-dialog-actions fxFlexAlign="center">
+    <!-- <button mat-raised-button [mat-dialog-close] color="accent" [disabled]="!form.valid" (click)="submit.click()">
+      Submit {{ form.value | json }}
+    </button> -->
+  </div>
+</div>
+<!-- <app-file-uploader (droppedFile)="droppedImage($event)"></app-file-uploader> -->
+<!-- <img [src]="droppedArticleImage" alt="" /> -->
+
+<!-- <mat-form-field>
+        <mat-chip-list #tagList>
+          <mat-chip
+            *ngFor="let tag of selectedTags"
+            [selectable]="true"
+            [removable]="true"
+            (removed)="removeTag(tag)"
+            >{{ tag }}
+            <mat-icon matChipRemove>cancel</mat-icon>
+          </mat-chip>
+          <input
+            #tagsInput
+            placeholder="Tags"
+            [formControl]="form.controls.tagList"
+            [matChipInputFor]="tagList"
+            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+            (matChipInputTokenEnd)="addTag($event)"
+            [matAutocomplete]="auto"
+          />
+        </mat-chip-list>
+        <mat-autocomplete
+          (optionSelected)="addSelected($event)"
+          #auto="matAutocomplete"
+        >
+          <mat-option *ngFor="let tag of filteredTags | async" [value]="tag">{{
+            tag.title
+          }}</mat-option>
+        </mat-autocomplete>
+      </mat-form-field> -->
+<!-- <ckeditor
+    [editor]="editor"
+    [(ngModel)]="editorBody"
+    (change)="onBodyChange($event)"
+  ></ckeditor> -->
