Flexify app component as container

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,16 @@
-<router-outlet> </router-outlet>
+<div fxFlex="auto"></div>
+<div
+  fxLayout="row"
+  fxLayoutAlign="center space-around"
+  fxFlex.gt-xs="500px"
+  fxFlex.gt-sm="800px"
+  fxFlex.gt-md="1000px"
+  fxFlex.gt-lg="1140px"
+>
+  <router-outlet></router-outlet>
+</div>
+<div fxFlex="auto"></div>
+
 <button mat-fab *ngIf="!isOnArticlePost" class="floating-btn" (click)="openAddArticleModal()">
   <mat-icon>add</mat-icon>
 </button>
