--- a/src/app/article/update-article/update-article.component.html
+++ b/src/app/article/update-article/update-article.component.html
@@ -1,30 +1,28 @@
 <!-- <mat-progress-bar mode="determinate" [value]="posterProgress" *ngIf="posterInProgress"></mat-progress-bar> -->
-<div fxLayout="row" fxLayoutAlign="center center" fxFill>
-  <div fxLayout="column" fxFlexAlign="center" fxLayoutGap="1rem">
-    <h1 mat-dialog-title>Create Article</h1>
-    <form mat-dialog-content (ngSubmit)="onSubmit()" [formGroup]="form" fxLayout="column" fxFlexAlign="center">
-      <button type="submit" hidden #submit></button>
-      <mat-form-field>
-        <input matInput placeholder="title" [formControl]="form.controls.title" />
-        <mat-error *ngIf="form.controls.title.getError('required')"> Title is <strong>required</strong> </mat-error>
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput placeholder="description" [formControl]="form.controls.description" />
-      </mat-form-field>
+<!-- <div fxLayout="row" fxLayoutAlign="center center" fxFill> -->
+<div fxLayout="column" fxLayoutAlign="space-between center" fxLayoutGap="1rem">
+  <h1 mat-dialog-title>Create Article</h1>
+  <app-file-uploader (droppedFile)="droppedImage($event)"></app-file-uploader>
+  <img [src]="article.poster?.location" alt="" />
 
-      <app-chips-autocompleat-input [(selectedOptions)]="articleTags" [allOptions]="allTags"></app-chips-autocompleat-input>
-      <div fxLayoutAlign="center">
-        <ckeditor [editor]="editor" [formControl]="form.controls.body"></ckeditor>
-      </div>
-    </form>
-    <app-file-uploader (droppedFile)="droppedImage($event)"></app-file-uploader>
-    <button mat-raised-button color="accent" [disabled]="!form.valid" (click)="submit.click()">Submit</button>
-  </div>
+  <form mat-dialog-content (ngSubmit)="onSubmit()" [formGroup]="form" fxLayout="column" fxFill>
+    <button type="submit" hidden #submit></button>
+    <mat-form-field>
+      <input matInput placeholder="title" [formControl]="form.controls.title" />
+      <mat-error *ngIf="form.controls.title.getError('required')"> Title is <strong>required</strong> </mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="description" [formControl]="form.controls.description" />
+    </mat-form-field>
+    <app-chips-autocompleat-input [(selectedOptions)]="articleTags" [allOptions]="allTags"></app-chips-autocompleat-input>
+  </form>
+  <ckeditor [editor]="editor" [formControl]="form.controls.body" fxFlex="10 10 100" fxFill></ckeditor>
+
+  <button mat-raised-button color="accent" [disabled]="!form.valid" (click)="submit.click()">Submit</button>
 </div>
+<!-- </div> -->
 
 <!-- <app-file-uploader (droppedFile)="droppedImage($event)"></app-file-uploader> -->
-<img [src]="article.poster?.location" alt="" />
-{{ article.poster.location }}
 
 <!-- <mat-form-field>
         <mat-chip-list #tagList>
