feat(CkEditor): Incoperate CKeditor with image upload adapter
This adds CKeditor custom build bundled with simple upload adapter.
the package is published to npm under @suhayb scope.

--- a/src/app/article/update-article/update-article.component.html
+++ b/src/app/article/update-article/update-article.component.html
@@ -16,7 +16,7 @@
     </mat-form-field>
     <app-chips-autocompleat-input [(selectedOptions)]="articleTags" [allOptions]="allTags"></app-chips-autocompleat-input>
   </form>
-  <ckeditor [editor]="editor" [formControl]="form.controls.body" fxFlex="10 10 100" fxFill></ckeditor>
+  <ckeditor #ckeditor [editor]="editor" [config]="editorConfig" [formControl]="form.controls.body" fxFlex="10 10 100" fxFill></ckeditor>
 
   <button mat-raised-button color="accent" [disabled]="!form.valid" (click)="submit.click()">Submit</button>
 </div>
