Cache article into router state

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div fxFlex="auto"></div>
 <div
   fxLayout="row"
+  fxFill
   fxLayoutAlign="center space-around"
   fxFlex.gt-xs="500px"
   fxFlex.gt-sm="800px"
