Hide add article btn when user is not loggedin

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
-<button mat-fab *ngIf="!isOnArticlePost" class="floating-btn" (click)="openAddArticleModal()">
+<div *ngIf="!isOnArticlePost"></div>
+<button mat-fab *ngIf="isLoggedIn$ | async as loggedIn;" class="floating-btn" (click)="openAddArticleModal()">
   <mat-icon>add</mat-icon>
 </button>
+
