--- a/src/app/article/articles-list/articles-list.component.html
+++ b/src/app/article/articles-list/articles-list.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column" fxLayoutGap="1rem">
   <mat-card *ngFor="let article of articles">
-    <mat-card-header>
-      <mat-card-title>{{ article.title }}</mat-card-title>
+    <mat-card-header fxLayoutAlign="center">
+      <mat-card-title style="text-align: center;">{{ article.title }}</mat-card-title>
       <mat-card-subtitle>{{ article.description }}</mat-card-subtitle>
     </mat-card-header>
     <img
