--- a/src/app/article/articles-list/articles-list.component.html
+++ b/src/app/article/articles-list/articles-list.component.html
@@ -11,8 +11,8 @@
       loading="lazy"
       alt="article poster"
     />
-    <mat-card-content> </mat-card-content>
-    <mat-card-actions>
+    <!-- <mat-card-content> </mat-card-content> -->
+    <mat-card-actions fxLayoutAlign="space-between">
       <button
         mat-icon-button
         color="primary"
@@ -21,6 +21,9 @@
         *ngIf="canEditArticle(article)"
       >
         <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button color="primary" (click)="deleteArticle(article)" *ngIf="canEditArticle(article)">
+        <mat-icon>delete</mat-icon>
       </button>
     </mat-card-actions>
   </mat-card>
