[styles]: Set background pattern

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,5 +6,5 @@ body {
 }
 body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-image: url("https://poor-blog.s3.eu-west-2.amazonaws.com/leaves-pattern.png");
 }
-
