[style]: Stretch body content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div style="margin: 1rem 25rem 5rem 25rem;" fxLayout="column" fxLayoutAlign="center center">
+<div style="margin: 1rem 25rem 5rem 25rem;" fxLayout="column" fxLayoutAlign="center stretch">
   <app-header fxFlex.gt-md="1440" fxFill></app-header>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
