--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,8 +1,7 @@
 :host {
-  padding-bottom: 2rem;
+  h1 {
+    text-align: center;
+    cursor: pointer;
+  }
 }
-h1 {
-  font-family: "Amiri", serif;
-  text-align: center;
-  font-size: xx-large;
-}
+
