UI: fix layout and responsiveness

--- a/src/app/article/article-detail/article-detail.component.html
+++ b/src/app/article/article-detail/article-detail.component.html
@@ -1,7 +1,5 @@
-
-
-<article style="margin: 1rem 0 1rem 0;" fxLayout="column" fxFill fxLayoutAlign="center center">
-  <h1 class="mat-display-2" fxFlexAlign="center">
+<article fxLayout="column" fxLayoutAlign="center center">
+  <h1 ngClass.xs="mat-heading-1" ngClass.gt-sm="mat-display-1" ngClass.gt-md="mat-display-2" fxFlexAlign="center">
     {{ article.title }}
   </h1>
   <h3 class="mat-subheading-1">
