--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,1 @@
-<h1 class="mat-display-2" fxFlexAlign="center" [routerLink]="['/']">صهيب الحسن</h1>
+<h1 ngClass.gt-sm="mat-display-2"  ngClass.ls-md="mat-display-1" fxFlexAlign="center" [routerLink]="['/']">صهيب الحسن</h1>
