--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,20 @@
-<div style="margin: 1rem 25rem 5rem 25rem;" fxLayout="column" fxLayoutAlign="center stretch">
-  <app-header fxFlex.gt-md="1440" fxFill></app-header>
-  <router-outlet></router-outlet>
-  <app-footer></app-footer>
+<div fxFlex fxLayoutAlign="center" fxFill>
+  <div
+    fxLayout="column"
+    fxLayoutAlign="center stretch"
+    fxFlex.gt-xs="599px"
+    fxFlex.gt-sm="600px"
+    fxFlex.gt-md="960px"
+    fxFlex.gt-lg="1280px"
+    fxFlex.gt-xl="1920px"
+  >
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+  </div>
 </div>
+
 <div *ngIf="!isOnArticlePost"></div>
-<button mat-fab *ngIf="isLoggedIn$ | async as loggedIn;" class="floating-btn" (click)="openAddArticleModal()">
+<button mat-fab *ngIf="isLoggedIn$ | async as loggedIn" class="floating-btn" (click)="openAddArticleModal()">
   <mat-icon>add</mat-icon>
 </button>
-
